test/e2e/fixtures/host-cross-namespace-no-namespacing/queries-http.json
[
  {
    "url": "/target/",
    "headers": {"Host": "tls-context-host-1"}
  }
]
