test/e2e/fixtures/host-cross-namespace-no-namespacing/queries-https.json
[
  {
    "url": "/ambassador/v0/diag/?json=true&filter=errors",
    "headers": {"Host": "tls-context-host-1"},
    "insecure": true,
    "sni": true
  },
  {
    "url": "/target/",
    "headers": {"Host": "tls-context-host-1"},
    "insecure": true,
    "sni": true
  },
  {
    "url": "/ambassador/v0/check_ready",
    "headers": {"Host": "tls-context-host-1"},
    "insecure": true,
    "sni": true
  },
  {
    "url": "/ambassador/v0/check_alive",
    "headers": {"Host": "tls-context-host-1"},
    "insecure": true,
    "sni": true
  }
]
